--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ava": "^0.16.0"
   },
   "dependencies": {
+    "qcloudapi-sdk": "^0.1.4",
     "moment": "^2.14.1",
     "request": "^2.74.0"
   }
